<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:text="@string/login_text"
        android:textColor="@color/white66"
        android:textSize="30sp"
        android:textStyle="normal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp" />

    <com.rainwood.tools.view.ClearEditText
        android:id="@+id/et_login_account"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginEnd="@dimen/padding_left"
        android:hint="@string/login_input_account"
        android:inputType="phone"
        android:singleLine="true"
        app:regexType="mobile" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginEnd="@dimen/padding_left" />

    <com.rainwood.tools.view.PasswordEditText
        android:id="@+id/et_login_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:hint="@string/login_input_pwd"
        android:singleLine="true"
        app:regexType="nonnull" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginEnd="@dimen/padding_left" />

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:padding="5dp"
        android:text="@string/login_forget_pwd"
        android:textColor="@color/red30"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_login_commit"
        style="@style/RedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:text="@string/login_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tips"
            android:textColor="@color/textColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_now"
            android:textColor="@color/red30"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>