<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_add_merchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_10"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="25dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_add_merchant"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_merchant_num"
                android:textColor="@color/white66"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/common_input"
                android:paddingStart="5dp"
                android:maxLines="1"
                android:ems="12"
                android:maxEms="12"
                android:paddingEnd="10dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray_white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_obtain_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_obtain_pwd"
                android:textColor="@color/red30"
                android:textSize="13sp" />

        </LinearLayout>

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/search_pwd"
                android:textColor="@color/white66"
                android:textSize="15sp" />

            <com.rainwood.tools.view.ClearEditText
                android:id="@+id/cet_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/common_input"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray_white"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btn_confirm_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/shape_radius_red_full_23"
            android:paddingStart="48dp"
            android:paddingTop="16dp"
            android:paddingEnd="48dp"
            android:paddingBottom="16dp"
            android:text="@string/search_confirm_add"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_dismiss"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_below="@+id/ll_add_merchant"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_input_delete" />

</RelativeLayout>