<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/activity_title" />

    <com.rainwood.tools.view.ClearEditText
        android:id="@+id/cet_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:hint="@string/reset_password"
        android:inputType="number"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginEnd="@dimen/padding_left" />

    <com.rainwood.tools.view.ClearEditText
        android:id="@+id/cet_password_again"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:hint="@string/reset_password_again"
        android:inputType="number"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginEnd="@dimen/padding_left" />

    <Button
        android:id="@+id/btn_confirm"
        style="@style/RedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_right"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/padding_right"
        android:text="@string/common_confirm" />

</LinearLayout>