<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_set_default"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_white_5"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/shape_red_full_2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:text="@string/common_default"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/textColor"
            android:textSize="17sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/textColor"
        android:textSize="15sp" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_margin="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_checked"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/shape_uncheck_shape" />

        <TextView
            android:id="@+id/tv_set_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_default_address"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_icon_edit" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_edit"
            android:textColor="@color/fontColor"
            android:textSize="13sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_trash" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_delete"
            android:textColor="@color/fontColor"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>